--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_app_icon_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Stopify"
+        android:theme="@style/Theme.MysplashScreen"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Stopify">
+            android:theme="@style/Theme.MysplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
